[workspace]
members = ["labs/lab1_publish_subscribe", "labs/lab2_queue_groups", "shared"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.99"
async-nats = "0.42.0"
clap = { version = "4.5.47", features = ["derive"] }
config = "0.15.15"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
hostname = "0.4"